--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,20 @@
             <scope>test</scope>
         </dependency>
         <!-- ... -->
+
+        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.16.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.1</version>
+        </dependency>
+
     </dependencies>
     <!-- ... -->
 
