--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.12.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+        </dependency>
 
     </dependencies>
     <!-- ... -->
