--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -17,7 +17,8 @@ info:
 logging:
   level:
     org:
-      hibernate: ERROR
+      hibernate: DEBUG
+      hibernate.type: TRACE
     root: ERROR
     org.hibernate.engine.jdbc.connections.internal.DriverManagerConnectionProviderImpl: ERROR
 
@@ -29,6 +30,9 @@ dialect: org.hibernate.dialect.H2Dialect
 show_sql: true
 hibernate.hbm2ddl.auto: update
 
+chatgpt:
+  api-url: https://api.openai.com/v1/chat/completions
+  api-key: ${apikey}
 
 # Metrics configuration
 endpoints:
